--- a/app/assets/stylesheets/transaction_box.scss
+++ b/app/assets/stylesheets/transaction_box.scss
@@ -1,5 +1,5 @@
 .transaction-box{
-  position: fixed;
+  position: sticky;
   top: 100px;
   right: 175px;
   max-width: 225px;
